airflow/logs/dag_id=Vehicle_Data_scrape_Pipeline/run_id=manual__2024-08-20T063927.151549+0000/task_id=data_proprocessing/attempt=4.log
[2024-08-20T09:15:06.151+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Vehicle_Data_scrape_Pipeline.data_proprocessing manual__2024-08-20T06:39:27.151549+00:00 [queued]>
[2024-08-20T09:15:06.159+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Vehicle_Data_scrape_Pipeline.data_proprocessing manual__2024-08-20T06:39:27.151549+00:00 [queued]>
[2024-08-20T09:15:06.166+0000] {taskinstance.py:2193} INFO - Starting attempt 4 of 4
[2024-08-20T09:15:06.177+0000] {taskinstance.py:2217} INFO - Executing <Task(PythonOperator): data_proprocessing> on 2024-08-20 06:39:27.151549+00:00
[2024-08-20T09:15:06.188+0000] {standard_task_runner.py:60} INFO - Started process 23022 to run task
[2024-08-20T09:15:06.190+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'Vehicle_Data_scrape_Pipeline', 'data_proprocessing', 'manual__2024-08-20T06:39:27.151549+00:00', '--job-id', '18', '--raw', '--subdir', 'DAGS_FOLDER/vehicle_data_scraping_pipeline.py', '--cfg-path', '/tmp/tmpuj38jdt6']
[2024-08-20T09:15:06.201+0000] {standard_task_runner.py:88} INFO - Job 18: Subtask data_proprocessing
[2024-08-20T09:15:06.264+0000] {task_command.py:423} INFO - Running <TaskInstance: Vehicle_Data_scrape_Pipeline.data_proprocessing manual__2024-08-20T06:39:27.151549+00:00 [running]> on host 98fc14519f6a
[2024-08-20T09:15:06.424+0000] {taskinstance.py:2513} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='sdeshan' AIRFLOW_CTX_DAG_ID='Vehicle_Data_scrape_Pipeline' AIRFLOW_CTX_TASK_ID='data_proprocessing' AIRFLOW_CTX_EXECUTION_DATE='2024-08-20T06:39:27.151549+00:00' AIRFLOW_CTX_TRY_NUMBER='4' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-08-20T06:39:27.151549+00:00'
[2024-08-20T09:15:06.445+0000] {taskinstance.py:2731} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 200, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 217, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/components/vehicle/data_scraping_components/data_preprocces.py", line 47, in data_preprocces
    create_table(data_table, [
  File "/opt/airflow/dags/components/utils/database_table_creation.py", line 20, in create_table
    cur.execute(f"""
psycopg2.errors.SyntaxError: syntax error at or near "Model"
LINE 3: ...       Brand VARCHAR(255),Posted_Date VARCHAR(255)Model VARC...
                                                             ^

[2024-08-20T09:15:06.477+0000] {taskinstance.py:1149} INFO - Marking task as FAILED. dag_id=Vehicle_Data_scrape_Pipeline, task_id=data_proprocessing, execution_date=20240820T063927, start_date=20240820T091506, end_date=20240820T091506
[2024-08-20T09:15:06.481+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.8/site-packages/***/utils/context.py:207 AirflowContextDeprecationWarning: Accessing 'execution_date' from the template is deprecated and will be removed in a future version. Please use 'data_interval_start' or 'logical_date' instead.
[2024-08-20T09:15:06.486+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.8/site-packages/***/utils/email.py:154 RemovedInAirflow3Warning: Fetching SMTP credentials from configuration variables will be deprecated in a future release. Please set credentials using a connection instead.
[2024-08-20T09:15:06.486+0000] {email.py:270} INFO - Email alerting: attempt 1
[2024-08-20T09:15:08.309+0000] {email.py:281} INFO - Sent an alert email to ['deshanariyarathna@gmail.com']
[2024-08-20T09:15:10.477+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 18 for task data_proprocessing (syntax error at or near "Model"
LINE 3: ...       Brand VARCHAR(255),Posted_Date VARCHAR(255)Model VARC...
                                                             ^
; 23022)
[2024-08-20T09:15:10.507+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-08-20T09:15:10.529+0000] {taskinstance.py:3312} INFO - 0 downstream tasks scheduled from follow-on schedule check
